# bitcoin_clarity

./: .gitignore  Clarinet.toml  README.md  pyproject.toml
contracts/: nft_tickets.clar  tickets.clar
deployments/: buy_nft.yaml  default.devnet-plan.yaml  sell_nft.devnet-plan.yaml  send-btc.devnet-plan.yaml
src/: executor.py  generatePlan.py
tests/: send-to-first-input_test.ts
